Added basic error validation to form fields

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -57,6 +57,9 @@ typeMismatch.java.math.BigInteger=Property {0} must be a valid number
 # Banner
 banner.user.current={0}
 
+# User
+user.settings.error.invalidPasswordConfirmationValue=Password confirmation value does not match password
+
 # Profile
 profile.create.label.name=Name
 profile.create.label.description=Description
